# CoonSpect

./: .env.example  .gitignore  Architect.docx  README.md  docker-compose.yml  et --hard HEAD
backend/: .dockerignore  .gitignore  34556a80-9391-4ae4-98dd-86043f76a173.txt  7e5b9e2d-9662-4c62-ac12-c252e6e192d3.txt  Dockerfile  Makefile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 55c449d107b8_schema.py  b4ff8c637bb8_init.py  c6dbc0f93e18_init.py  cc2953c2dec9_rename_text_url_text.py  d2a9ab2dad43_init.py
backend/src/: celery_app.py  config.py  main.py  wsmanager.py
backend/src/api/routers/: lectures.py  tasks.py  users.py
backend/src/app/: celery_app.py  config.py  main.py  security.py  wsmanager.py
backend/src/app/api/: deps.py  tools.py
backend/src/app/api/routers/: auth.py  lectures.py  tasks.py  users.py
backend/src/app/api/schemas/: lecture.py  status.py  user.py
backend/src/app/db/: base.py  redis.py  session.py
backend/src/app/db/models/: __init__.py  enums.py  lecture.py  user.py
backend/src/db/: session.py
backend/src/db/models/: lecture.py
backend/src/schemas/: lecture.py  status.py  user.py
backend/src/tests/: conftest.py  main_test.py  tasks_test.py
frontend/: nginx.conf  package-lock.json  tailwind.config.js  todo.txt
frontend/src/: App.css  App.tsx  index.css
llm-service/: Dockerfile  requirements.txt
llm-service/src/: llm_engine.py  main.py  (+2 more)
mock-stt/: Dockerfile  requirements.txt
mocks/: README.md
stt-service/: .gitignore  Dockerfile
(+32 files in other folders)
